Fixed overflow error

--- a/styles/pages/contact.css
+++ b/styles/pages/contact.css
@@ -10,6 +10,7 @@
     font-weight: bold;
     font-style: normal;
 }
+body { overflow-x:hidden; }
 
 .reach {
     color: whitesmoke;
